--- a/package.json
+++ b/package.json
@@ -71,11 +71,13 @@
     "axios": "^0.21.1",
     "change-case": "^4.1.2",
     "date-fns": "^2.22.1",
+    "draft-js": "^0.11.7",
     "faker": "^5.5.3",
     "firebase": "9.0.2",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "geojson": "^0.5.0",
+    "highlight.js": "^11.1.0",
     "history": "^5.0.1",
     "i18next": "^20.3.4",
     "i18next-http-backend": "^1.2.6",
@@ -95,6 +97,7 @@
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.1",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-dropzone": "11.3.4",
     "react-firebaseui": "^4.1.0",
     "react-helmet-async": "^1.0.9",
@@ -106,6 +109,7 @@
     "react-leaflet-location-picker": "^1.4.2",
     "react-markdown": "^6.0.2",
     "react-number-format": "^4.7.3",
+    "react-quill": "^2.0.0-beta.2",
     "react-redux": "^7.2.4",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
